[package]
name = "plyparse"
version = "0.1.0"
authors = ["Sriram Vijendran <vijendran.sriram@email.com>"]
license = "MIT"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/sriramv/plyparse"
repository = "https://github.com/sriram98v/plyparse"
keywords = ["cli", "ply"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ply-rs = "0.1.3"
clap = { version = "4.0", features = ["derive"] }
